--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.android.practiceset2">
+    package="com.example.android.Pickr">
 
     <application
         android:allowBackup="true"
@@ -9,14 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".NewSentenceActivity"></activity>
         <activity
-            android:name=".BrowseAllRecords"
+            android:name=".BrowseAllSentences"
             android:parentActivityName=".MainActivity">
 
             <!-- The meta-data tag is required if you support API level 15 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+                android:value="com.example.android.Pickr.MainActivity" />
         </activity>
         <activity
             android:name=".DailyTrainingSessionActivity"
@@ -25,7 +26,7 @@
             <!-- The meta-data tag is required if you support API level 15 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+                android:value="com.example.android.Pickr.MainActivity" />
         </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
