--- a/build.gradle
+++ b/build.gradle
@@ -18,10 +18,18 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {url 'https://maven.google.com'}
         
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    roomVersion = '2.2.1'
+    archLifecycleVersion = '2.2.0-rc2'
+    coreTestingVersion = '2.1.0'
+    materialVersion = '1.0.0'
 }
