--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NewSentenceActivity"></activity>
+        <activity android:name=".NewSentenceActivity"
+            android:parentActivityName=".BrowseAllSentences"
+            android:label="Add sentence"></activity>
         <activity
             android:name=".BrowseAllSentences"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity"
+            android:label="Sentence browser">
 
             <!-- The meta-data tag is required if you support API level 15 and lower -->
             <meta-data
@@ -21,14 +24,17 @@
         </activity>
         <activity
             android:name=".DailyTrainingSessionActivity"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity"
+            android:label="Daily training session">
 
             <!-- The meta-data tag is required if you support API level 15 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.android.Pickr.MainActivity" />
         </activity>
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/AppThemeForStartingScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
